# hlv

./: .gitignore  API.md  CLAUDE.md  README.md  dev.sh  railway.toml
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: config.rs  geo.rs  main.rs  models.rs  store.rs  ws.rs
backend/src/routes/: comments.rs  mod.rs  threads.rs
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.js  wrangler.toml
frontend/src/: app.html
frontend/src/lib/: api.js  posts.js
frontend/src/routes/: +page.svelte
frontend/src/routes/blog/: +page.svelte
frontend/src/routes/como/: +page.svelte
frontend/static/: _headers  manifest.json
