[package]
name = "hlv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rand_distr = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
